version mobile tommy correction

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2372,3 +2372,14 @@ textarea {
     border-color: green !important;
     color: white !important;
 }
+
+
+.drop_down_map{
+    font-size: 1.2rem;
+    color: black;
+    margin-left: 10px;
+}
+
+.dropdown-toggle::after {
+    display: none !important;
+}
